fix: align the sidebar on map page

--- a/online-zoo/pages/zoos-map/zoos-map.css
+++ b/online-zoo/pages/zoos-map/zoos-map.css
@@ -171,7 +171,7 @@ header {
   position: absolute;
 }
 .hud-wrapper {
-  width: 1800px;
+  width: 1796px;
 }
 .aside__animal-buttons {
   height: 436px;
